# templates

./: flake.nix
graphile-migrate/: .gmrc  flake.nix
haskell/: .gitignore  flake.nix  hello.cabal  hie.yaml
haskell/app/: Main.hs
haskell/src/: Hello.hs
jupyter/: .gitignore  README.md  flake.nix
python/: .gitignore  flake.nix
python-poetry/: flake.nix
